overflow bug

--- a/FrontEnd/src/app/Pages/board/board.component.css
+++ b/FrontEnd/src/app/Pages/board/board.component.css
@@ -5,4 +5,5 @@
     font-weight: 400;
     /* border-bottom: 1px; */
     margin: 0 0 5px 0;
+    overflow-wrap: break-word;
 }
