--- a/FrontEnd/src/app/Pages/home/home.component.css
+++ b/FrontEnd/src/app/Pages/home/home.component.css
@@ -41,11 +41,13 @@ h3 {
   left: 10px;
   pointer-events: none;
   display: inline-flex;
+  height: 80px;
 }
 
 .board-tile-title span{
   overflow-wrap: break-word;
   width: 160px;
+  overflow: hidden;
 }
 
 .sub{
